[package]
name = "monit-tool"
version = "0.1.5"
edition = "2021"
authors = ["s00d <Virus191288@gmail.com>"]
description = "command-line utility written in Rust for working with GitHub Actions"
repository = "https://github.com/s00d/monit-tool"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "monit-tool"
path = "src/main.rs"

[dependencies]
crossterm = "0.27.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-matcher", "fuzzy-select"] }
plotters = "0.3.5"
rgb = "0.8.37"
sysinfo = "0.29.11"
textplots = "0.8.4"
