[package]
name = "monit-tool"
version = "0.3.1"
edition = "2021"
authors = ["s00d <Virus191288@gmail.com>"]
description = "command-line utility written in Rust for working with GitHub Actions"
repository = "https://github.com/s00d/monit-tool"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "monit-tool"
path = "src/main.rs"

[dependencies]
crossterm = "0.28.1"
dialoguer = { version = "0.11.0", features = ["fuzzy-matcher", "fuzzy-select"] }
rgb = "0.8.50"
sysinfo = "0.33.1"
textplots = "0.8.6"
rand = "0.8.5"
console = "0.15.10"
clap = { version = "4.5.26", features = ["derive"] }
chrono = "0.4.39"
ctrlc = "3.4.5"